--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jsonwebtoken": "^8.1.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "react": "^16.2.0",
+    "react-datetime": "^2.12.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
